apps/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  serviceName: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/prowlarr:version-2.6.5.5623
          imagePullPolicy: Always
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
